--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,6 +1,6 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="60b471">  <td>21/12/09 16:52:11</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GitHubExperiment.demoTest()[pri:0, instance:GitHubPushAndImport.GitHubExperiment@26275bef]">demoTest</td> 
-  <td>main@501609049</td>   <td></td> </tr>
+<tr bgcolor="60b471">  <td>21/12/10 17:42:44</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="MixedClassTest.Failit()[pri:0, instance:GitHubPushAndImport.MixedClassTest@7690781]">Failit</td> 
+  <td>main@1922930974</td>   <td></td> </tr>
 </table>
